[package]
name = "py-spy"
version = "0.3.3"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy"
description = "Sampling profiler for Python programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "MIT"
build="build.rs"

[lib]
crate-type = ["staticlib", "dylib", "rlib"]

[dependencies]
clap = {version="2", features=["wrap_help"]}
env_logger = "0.7"
failure = "0.1.8"
goblin = "0.2.3"
lazy_static = "1.1.0"
libc = "0.2.80"
log = "0.4"
lru = "0.6"
regex = "1"
proc-maps = "0.1.6"
memmap = "0.7.0"
cpp_demangle = "0.3.0"
rand = "0.7"
rand_distr = "0.3"
remoteprocess = {version="0.3.4", features=["unwind"]}
console = "0.14.1"
ctrlc = "3.2.0"
indicatif = "0.16.2"
inferno = "0.10.7"
tempfile = "3.2.0"
termios = "0.3.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
